--- a/src/Components/ui/HomePageContainers/Container1/Container1.module.css
+++ b/src/Components/ui/HomePageContainers/Container1/Container1.module.css
@@ -111,6 +111,7 @@
 
 .contact img {
   cursor: pointer;
+  height: 25px;
 }
 
 @media (max-width: 768px) {
@@ -229,13 +230,13 @@
     justify-content: space-between;
   }
 
-  .contact img:nth-of-type(1) {
+  /* .contact img:nth-of-type(1) {
     width: 30px;
     height: 30px;
-  }
+  } */
 }
 
-.contact img:nth-of-type(2) {
+/* .contact img:nth-of-type(2) {
   width: 31px;
   height: 26px;
 }
@@ -248,4 +249,4 @@
 .contact img:nth-of-type(4) {
   width: 27px;
   height: 27px;
-}
+} */
