--- a/src/Components/Blocks/Header/Header.module.css
+++ b/src/Components/Blocks/Header/Header.module.css
@@ -187,14 +187,17 @@
   margin: 0;
   padding: 0;
 }
-.dropdownList li a {
+.dropdownList button {
   display: block;
   padding: 10px 12px;
   border-radius: 10px;
   color: #fff;
   text-decoration: none;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
 }
-.dropdownList li a:hover {
+.dropdownList button:hover {
   /* background: rgba(255, 255, 255, 0.06); */
   color: #e55645;
 }
